# edx-oauth2-wordpress-backend

./: .gitignore  CHANGELOG.md  LICENSE.txt  Makefile  README.rst  pyproject.toml  release.sh  setup.py
data/: get_user_details.json  get_user_details_extended.json  tests.py  wp-oauth-response-expired-token.json  wp-oauth-response.json
oauth2_wordpress/: wp_oauth.py
requirements/: latest-psa.txt  stable-psa.txt  test.txt
stepwisemath_oauth_backend/: __init__.py
stepwisemathai_oauth_backend/: __init__.py  wp_oauth.py
tests/: tests.py
tests/data/: get_user_details.json  wp-oauth-me.json  wp-oauth-redirect-mismatch.json
wp_oauth_backend/: base_oauth.py  oauth.py  stepwise_oauth.py  wp_oauth.py
